crates/vexor-compiler/tests/golden/error/input/fn_missing_body.vx
// missing = body
fn double(x)

val result = double(10)
export Circle(result)
